// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`u-number-input.vue > Demo-单位展示 1`] = `
<div>
  <div>普通前缀</div>
  <div button-display="tail" class="root root" placeholder="abcdsdf">
    <span class="baseline">b</span>
    <span class="placeholder">abcdsdf</span>
    <input button-display="tail" class="input" type="text">
    <span class="button" role="up" tabindex="0"></span>
    <span class="button" role="down" tabindex="0"></span>
  </div>
  <div button-display="tail" class="root root" placeholder="abcdsdf" prefix="true">
    <span class="baseline">b</span>
    <span class="placeholder">abcdsdf</span>
    <span class="prefix" name="true">
      <span>$</span>
    </span>
    <input button-display="tail" class="input" type="text">
    <span class="button" role="up" tabindex="0"></span>
    <span class="button" role="down" tabindex="0"></span>
  </div>
  <div button-display="tail" class="root root" placeholder="abcdsdf" prefix="true">
    <span class="baseline">b</span>
    <span class="placeholder">abcdsdf</span>
    <span class="prefix" name="true">
      <span>$</span>
    </span>
    <input button-display="tail" class="input" type="text">
    <span class="button" role="up" tabindex="0"></span>
    <span class="button" role="down" tabindex="0"></span>
    <span class="suffix"></span>
  </div>
  <div button-display="tail" class="root root" hide-buttons="true" placeholder="abcdsdf" prefix="true">
    <span class="baseline">b</span>
    <span class="placeholder">abcdsdf</span>
    <span class="prefix" name="true">
      <span>$</span>
    </span>
    <input button-display="tail" class="input" hide-buttons="true" type="text">
  </div>
  <div button-display="tail" class="root root" hide-buttons="true" placeholder="abcdsdf" prefix="true">
    <span class="baseline">b</span>
    <span class="placeholder">abcdsdf</span>
    <span class="prefix" name="true">
      <span>$</span>
    </span>
    <input button-display="tail" class="input" hide-buttons="true" type="text">
    <span class="suffix"></span>
  </div>
  <div>普通后缀</div>
  <div button-display="tail" class="root root" placeholder="abcdsdf">
    <span class="baseline">b</span>
    <span class="placeholder">abcdsdf</span>
    <input button-display="tail" class="input" type="text">
    <span class="button" role="up" tabindex="0"></span>
    <span class="button" role="down" tabindex="0"></span>
  </div>
  <div button-display="tail" class="root root" placeholder="abcdsdf" suffix="true">
    <span class="baseline">b</span>
    <span class="placeholder">abcdsdf</span>
    <input button-display="tail" class="input" type="text">
    <span class="button" role="up" tabindex="0"></span>
    <span class="button" role="down" tabindex="0"></span>
    <span class="suffix">
      <span>
        <span>$</span>
      </span>
    </span>
  </div>
  <div button-display="tail" class="root root" placeholder="abcdsdf" suffix="true">
    <span class="baseline">b</span>
    <span class="placeholder">abcdsdf</span>
    <input button-display="tail" class="input" type="text">
    <span class="button" role="up" tabindex="0"></span>
    <span class="button" role="down" tabindex="0"></span>
    <span class="suffix">
      <span>
        <span>$</span>
      </span>
    </span>
  </div>
  <div button-display="tail" class="root root" hide-buttons="true" placeholder="abcdsdf" suffix="true">
    <span class="baseline">b</span>
    <span class="placeholder">abcdsdf</span>
    <input button-display="tail" class="input" hide-buttons="true" type="text">
    <span class="suffix">
      <span>
        <span>$</span>
      </span>
    </span>
  </div>
  <div button-display="tail" class="root root" hide-buttons="true" placeholder="abcdsdf" suffix="true">
    <span class="baseline">b</span>
    <span class="placeholder">abcdsdf</span>
    <input button-display="tail" class="input" hide-buttons="true" type="text">
    <span class="suffix">
      <span>
        <span>$</span>
      </span>
    </span>
  </div>
  <div>两边前缀</div>
  <div button-display="bothEnds" class="root root" placeholder="abcdsdf">
    <span class="baseline">b</span>
    <span class="placeholder">abcdsdf</span>
    <input button-display="bothEnds" class="input" type="text">
    <span class="button" role="up" tabindex="0"></span>
    <span class="button" role="down" tabindex="0"></span>
  </div>
  <div button-display="bothEnds" class="root root" placeholder="abcdsdf" prefix="true">
    <span class="baseline">b</span>
    <span class="placeholder">abcdsdf</span>
    <span class="prefix" name="true">
      <span>$</span>
    </span>
    <input button-display="bothEnds" class="input" type="text">
    <span class="button" role="up" tabindex="0"></span>
    <span class="button" role="down" tabindex="0"></span>
  </div>
  <div button-display="bothEnds" class="root root" placeholder="abcdsdf" prefix="true">
    <span class="baseline">b</span>
    <span class="placeholder">abcdsdf</span>
    <span class="prefix" name="true">
      <span>$</span>
    </span>
    <input button-display="bothEnds" class="input" type="text">
    <span class="button" role="up" tabindex="0"></span>
    <span class="button" role="down" tabindex="0"></span>
    <span class="suffix"></span>
  </div>
  <div button-display="bothEnds" class="root root" hide-buttons="true" placeholder="abcdsdf" prefix="true">
    <span class="baseline">b</span>
    <span class="placeholder">abcdsdf</span>
    <span class="prefix" name="true">
      <span>$</span>
    </span>
    <input button-display="bothEnds" class="input" hide-buttons="true" type="text">
  </div>
  <div button-display="bothEnds" class="root root" hide-buttons="true" placeholder="abcdsdf" prefix="true">
    <span class="baseline">b</span>
    <span class="placeholder">abcdsdf</span>
    <span class="prefix" name="true">
      <span>$</span>
    </span>
    <input button-display="bothEnds" class="input" hide-buttons="true" type="text">
    <span class="suffix"></span>
  </div>
  <div>两边后缀</div>
  <div button-display="bothEnds" class="root root" placeholder="abcdsdf">
    <span class="baseline">b</span>
    <span class="placeholder">abcdsdf</span>
    <input button-display="bothEnds" class="input" type="text">
    <span class="button" role="up" tabindex="0"></span>
    <span class="button" role="down" tabindex="0"></span>
  </div>
  <div button-display="bothEnds" class="root root" placeholder="abcdsdf" suffix="true">
    <span class="baseline">b</span>
    <span class="placeholder">abcdsdf</span>
    <input button-display="bothEnds" class="input" type="text">
    <span class="button" role="up" tabindex="0"></span>
    <span class="button" role="down" tabindex="0"></span>
    <span class="suffix">
      <span>
        <span>$</span>
      </span>
    </span>
  </div>
  <div button-display="bothEnds" class="root root" placeholder="abcdsdf" suffix="true">
    <span class="baseline">b</span>
    <span class="placeholder">abcdsdf</span>
    <input button-display="bothEnds" class="input" type="text">
    <span class="button" role="up" tabindex="0"></span>
    <span class="button" role="down" tabindex="0"></span>
    <span class="suffix">
      <span>
        <span>$</span>
      </span>
    </span>
  </div>
  <div button-display="bothEnds" class="root root" hide-buttons="true" placeholder="abcdsdf" suffix="true">
    <span class="baseline">b</span>
    <span class="placeholder">abcdsdf</span>
    <input button-display="bothEnds" class="input" hide-buttons="true" type="text">
    <span class="suffix">
      <span>
        <span>$</span>
      </span>
    </span>
  </div>
  <div button-display="bothEnds" class="root root" hide-buttons="true" placeholder="abcdsdf" suffix="true">
    <span class="baseline">b</span>
    <span class="placeholder">abcdsdf</span>
    <input button-display="bothEnds" class="input" hide-buttons="true" type="text">
    <span class="suffix">
      <span>
        <span>$</span>
      </span>
    </span>
  </div>
</div>
`;

exports[`u-number-input.vue > Demo-双向绑定 1`] = `
<div button-display="tail" class="root root">
  <span class="baseline">b</span>
  <span class="placeholder" style="display: none;"></span>
  <input button-display="tail" class="input" type="text">
  <span class="button" role="up" tabindex="0"></span>
  <span class="button" role="down" tabindex="0"></span>
</div>
`;

exports[`u-number-input.vue > Demo-只读和禁用 1`] = `
<div>
  <div class="root" direction="horizontal" type vusion-slot-name="default">
    <div button-display="tail" class="root root" readonly="readonly">
      <span class="baseline">b</span>
      <span class="placeholder" style="display: none;"></span>
      <input button-display="tail" class="input" readonly="readonly" type="text">
      <span class="button" role="up" tabindex="0"></span>
      <span class="button" role="down" tabindex="0"></span>
    </div>
    <div button-display="tail" class="root root" disabled="disabled">
      <span class="baseline">b</span>
      <span class="placeholder" style="display: none;"></span>
      <input button-display="tail" class="input" disabled="disabled" type="text">
      <span class="button" role="up" tabindex="0"></span>
      <span class="button" role="down" tabindex="0"></span>
    </div>
    <div button-display="bothEnds" class="root root" readonly="readonly">
      <span class="baseline">b</span>
      <span class="placeholder" style="display: none;"></span>
      <input button-display="bothEnds" class="input" readonly="readonly" type="text">
      <span class="button" role="up" tabindex="0"></span>
      <span class="button" role="down" tabindex="0"></span>
    </div>
    <div button-display="bothEnds" class="root root" disabled="disabled">
      <span class="baseline">b</span>
      <span class="placeholder" style="display: none;"></span>
      <input button-display="bothEnds" class="input" disabled="disabled" type="text">
      <span class="button" role="up" tabindex="0"></span>
      <span class="button" role="down" tabindex="0"></span>
    </div>
  </div>
</div>
`;

exports[`u-number-input.vue > Demo-基本用法 1`] = `
<div button-display="tail" class="root root">
  <span class="baseline">b</span>
  <span class="placeholder" style="display: none;"></span>
  <input button-display="tail" class="input" type="text">
  <span class="button" role="up" tabindex="0"></span>
  <span class="button" role="down" tabindex="0"></span>
</div>
`;

exports[`u-number-input.vue > Demo-基本用法 2`] = `
<div class="root" direction="horizontal" type vusion-slot-name="default">
  <div button-display="tail" class="root root">
    <span class="baseline">b</span>
    <span class="placeholder" style="display: none;"></span>
    <input button-display="tail" class="input" type="text">
    <span class="button" role="up" tabindex="0"></span>
    <span class="button" role="down" tabindex="0"></span>
  </div>
  <div button-display="tail" class="root root">
    <span class="baseline">b</span>
    <span class="placeholder" style="display: none;"></span>
    <input button-display="tail" class="input" type="text">
    <span class="button" role="up" tabindex="0"></span>
    <span class="button" role="down" tabindex="0"></span>
  </div>
  <div button-display="tail" class="root root">
    <span class="baseline">b</span>
    <span class="placeholder" style="display: none;"></span>
    <input button-display="tail" class="input" type="text">
    <span class="button" role="up" tabindex="0"></span>
    <span class="button" role="down" tabindex="0"></span>
  </div>
  <div button-display="tail" class="root root" prefix="true">
    <span class="baseline">b</span>
    <span class="placeholder" style="display: none;"></span>
    <span class="prefix" name="true">
      <span>$</span>
    </span>
    <input button-display="tail" class="input" type="text">
    <span class="button" role="up" tabindex="0"></span>
    <span class="button" role="down" tabindex="0"></span>
  </div>
</div>
`;

exports[`u-number-input.vue > Demo-基本用法 3`] = `
<div>
  <div class="root" direction="horizontal" type vusion-slot-name="default">
    <div button-display="tail" class="root root">
      <span class="baseline">b</span>
      <span class="placeholder" style="display: none;"></span>
      <input button-display="tail" class="input" type="text">
      <span class="button" role="up" tabindex="0"></span>
      <span class="button" role="down" tabindex="0"></span>
    </div>
    <div button-display="tail" class="root root">
      <span class="baseline">b</span>
      <span class="placeholder" style="display: none;"></span>
      <input button-display="tail" class="input" type="text">
      <span class="button" role="up" tabindex="0"></span>
      <span class="button" role="down" tabindex="0"></span>
    </div>
  </div>
</div>
`;

exports[`u-number-input.vue > Demo-按钮为两端分布 1`] = `
<div>
  <div class="root" direction="horizontal" type vusion-slot-name="default">
    <div button-display="bothEnds" class="root root">
      <span class="baseline">b</span>
      <span class="placeholder" style="display: none;"></span>
      <input button-display="bothEnds" class="input" type="text">
      <span class="button" role="up" tabindex="0"></span>
      <span class="button" role="down" tabindex="0"></span>
    </div>
  </div>
</div>
`;

exports[`u-number-input.vue > Demo-按钮样式 1`] = `
<div button-display="bothEnds" class="root root">
  <span class="baseline">b</span>
  <span class="placeholder" style="display: none;"></span>
  <input button-display="bothEnds" class="input" type="text">
  <span class="button" role="up" tabindex="0"></span>
  <span class="button" role="down" tabindex="0"></span>
</div>
`;

exports[`u-number-input.vue > Demo-最大值和最小值 1`] = `
<div>
  <div class="root" direction="horizontal" type vusion-slot-name="default">
    <div button-display="tail" class="root root">
      <span class="baseline">b</span>
      <span class="placeholder" style="display: none;"></span>
      <input button-display="tail" class="input" type="text">
      <span class="button" role="up" tabindex="0"></span>
      <span class="button" disabled="disabled" role="down" tabindex="0"></span>
    </div>
    <div button-display="tail" class="root root">
      <span class="baseline">b</span>
      <span class="placeholder" style="display: none;"></span>
      <input button-display="tail" class="input" type="text">
      <span class="button" role="up" tabindex="0"></span>
      <span class="button" role="down" tabindex="0"></span>
    </div>
  </div>
</div>
`;

exports[`u-number-input.vue > Demo-格式化 1`] = `
<div>
  <div class="root" direction="horizontal" type vusion-slot-name="default">
    <div button-display="tail" class="root root">
      <span class="baseline">b</span>
      <span class="placeholder" style="display: none;"></span>
      <input button-display="tail" class="input" type="text">
      <span class="button" role="up" tabindex="0"></span>
      <span class="button" role="down" tabindex="0"></span>
    </div>
    <div button-display="tail" class="root root">
      <span class="baseline">b</span>
      <span class="placeholder" style="display: none;"></span>
      <input button-display="tail" class="input" type="text">
      <span class="button" role="up" tabindex="0"></span>
      <span class="button" role="down" tabindex="0"></span>
    </div>
    <div button-display="tail" class="root root">
      <span class="baseline">b</span>
      <span class="placeholder" style="display: none;"></span>
      <input button-display="tail" class="input" type="text">
      <span class="button" role="up" tabindex="0"></span>
      <span class="button" role="down" tabindex="0"></span>
    </div>
  </div>
</div>
`;

exports[`u-number-input.vue > Demo-精度与间隔 1`] = `
<div>
  <div class="root" direction="horizontal" type vusion-slot-name="default">
    <div button-display="tail" class="root root">
      <span class="baseline">b</span>
      <span class="placeholder" style="display: none;"></span>
      <input button-display="tail" class="input" type="text">
      <span class="button" role="up" tabindex="0"></span>
      <span class="button" role="down" tabindex="0"></span>
    </div>
    <div button-display="tail" class="root root">
      <span class="baseline">b</span>
      <span class="placeholder" style="display: none;"></span>
      <input button-display="tail" class="input" type="text">
      <span class="button" role="up" tabindex="0"></span>
      <span class="button" role="down" tabindex="0"></span>
    </div>
    <div button-display="tail" class="root root">
      <span class="baseline">b</span>
      <span class="placeholder" style="display: none;"></span>
      <input button-display="tail" class="input" type="text">
      <span class="button" role="up" tabindex="0"></span>
      <span class="button" role="down" tabindex="0"></span>
    </div>
  </div>
</div>
`;

exports[`u-number-input.vue > Demo-精度与间隔 2`] = `
<div>
  <div class="root" direction="horizontal" type vusion-slot-name="default">
    <div button-display="tail" class="root root">
      <span class="baseline">b</span>
      <span class="placeholder" style="display: none;"></span>
      <input button-display="tail" class="input" type="text">
      <span class="button" role="up" tabindex="0"></span>
      <span class="button" role="down" tabindex="0"></span>
    </div>
  </div>
</div>
`;

exports[`u-number-input.vue > Demo-精度与间隔 3`] = `
<div>
  <div class="root" direction="horizontal" type vusion-slot-name="default">
    <div button-display="tail" class="root root">
      <span class="baseline">b</span>
      <span class="placeholder" style="display: none;"></span>
      <input button-display="tail" class="input" type="text">
      <span class="button" role="up" tabindex="0"></span>
      <span class="button" role="down" tabindex="0"></span>
    </div>
    <div button-display="tail" class="root root">
      <span class="baseline">b</span>
      <span class="placeholder" style="display: none;"></span>
      <input button-display="tail" class="input" type="text">
      <span class="button" role="up" tabindex="0"></span>
      <span class="button" role="down" tabindex="0"></span>
    </div>
  </div>
</div>
`;

exports[`u-number-input.vue > Demo-键盘事件 1`] = `
<div button-display="tail" class="root root">
  <span class="baseline">b</span>
  <span class="placeholder" style="display: none;"></span>
  <input button-display="tail" class="input" type="text">
  <span class="button" role="up" tabindex="0"></span>
  <span class="button" role="down" tabindex="0"></span>
</div>
`;

exports[`u-number-input.vue > Demo-高级格式化 1`] = `
<div>
  <div>展示保留3位小数 不省略0；值保留2位小数</div>
  <div button-display="tail" class="root root" placeholder="请输入">
    <span class="baseline">b</span>
    <span class="placeholder"></span>
    <input button-display="tail" class="input" type="text">
    <span class="button" role="up" tabindex="0"></span>
    <span class="button" role="down" tabindex="0"></span>
  </div>
  <div>值： 1</div>
</div>
`;
